--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,10 @@
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/dashboard", "dest": "/dashboard" },
     { "src": "/", "dest": "/" }
-  ],
-  
+  ]
 }
+{
+  "build": {
+    "outputDirectory": ".next"
+  }
 }
