--- a/yt-live-monitor/package.json
+++ b/yt-live-monitor/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "mongodb": "^5.10.0",
+    "mongodb": "^6.19.0",
     "nodemailer": "^6.9.3",
-    "next": "14.3.0",
+    "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.1"
   }
 }
